--- a/DFW_PS.html
+++ b/DFW_PS.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>mapboxgl-jupyter viz</title>
+<title>DFW deformation map</title>
 <meta charset='UTF-8' />
 <meta name='viewport'
       content='initial-scale=1,maximum-scale=1,user-scalable=no' />
